tests/errors/literals/u8-overflow.fn
---
Description: Constant expression exceeds u8 max
Expected: compile error
---

type Program
{
    fn Main -> i32
    {
        var v: u8 = 200 + 60
        return 0
    }
}
